--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,44 @@
+.cpjs_div{
+	width:100%;height:550px;background-color:#00f;padding:1px;
+}
+.cpjs_div .title_div{
+	width:816px;height:50px;line-height:50px;margin:30px auto;font-size:30px;
+}
+.cpjs_div .content_div{
+	width:816px;height:385px;margin:0 auto;
+}
+.cpjs_div .content_div .img_div{
+	width:816px;
+}
+.cpjs_div .content_div .img_div .right_img{
+	margin-left:120px;
+}
+.cpjs_div .content_div .sm_list_div{
+	width:100%;height:250px;
+}
+.cpjs_div .content_div .sm_list_div .item_div{
+	width:33%;height:250px;
+}
+.cpjs_div .content_div .sm_list_div .jjxy_item_div{
+	margin-top:-250px;
+	margin-left:33%;
+}
+.cpjs_div .content_div .sm_list_div .xttd_item_div{
+	margin-top:-250px;
+	margin-left:66%;
+}
+.cpjs_div .content_div .sm_list_div .item_div .item_img_div{
+	text-align:center;
+}
+.cpjs_div .content_div .sm_list_div .item_div .item_tit_div{
+	text-align:center;font-size:20px;
+}
+.cpjs_div .content_div .sm_list_div .item_div .item_cont_div{
+	width:80%;
+	color:#999;
+	margin:0 auto;
+}
+
 .foot_div{
 	width:100%;height:282px;background-color:#1F232A;
 }
