--- a/css/index.css
+++ b/css/index.css
@@ -39,6 +39,36 @@
 	margin:0 auto;
 }
 
+.yjcp_div{
+	width:100%;height:550px;background-color:#00f;padding:1px;
+}
+.yjcp_div .title_div{
+	width:816px;height:50px;line-height:50px;margin:30px auto;font-size:30px;
+}
+.yjcp_div .content_div{
+	width:816px;height:385px;margin:0 auto;
+}
+.yjcp_div .yjsbzc_div{
+	margin-top:-295px;
+	margin-left:600px;
+}
+.yjcp_div .yjsbzc_div .tit_div{
+	font-size:25px;
+}
+.yjcp_div .yjsbzc_div .row_div{
+	font-size:15px;
+}
+
+.xtywlc_div{
+	width:100%;height:752px;background-color:#fff;padding:1px;
+}
+.xtywlc_div .title_div{
+	width:1236px;height:50px;line-height:50px;margin:30px auto;font-size:30px;
+}
+.xtywlc_div .content_div{
+	width:1236px;height:642px;margin:0 auto;
+}
+
 .foot_div{
 	width:100%;height:282px;background-color:#1F232A;
 }
