--- a/css/zyit.css
+++ b/css/zyit.css
@@ -217,7 +217,7 @@ body{ font-size:12px; font-family:微软雅黑; overflow-x: hidden;}
 .section3_6{ width:90%; margin:8px auto 0 auto; font-size:14px; color:#666666; height:20px; line-height:20px; overflow:hidden; text-overflow:ellipsis; white-space:nowrap;}
 .section3_7{ width:90%; margin:18px auto 0 auto; font-size:13px; color:#666; height:38px; line-height:38px; background:url(../images/section3_6.png) right center no-repeat; border-top:1px solid #666;}
 .section3_1:hover .section3_3{ filter: alpha(opacity=100); -moz-opacity: 1; -khtml-opacity: 1; opacity: 1;}
-.section3_more{ margin:0 auto 2% auto; display:block; width:170px; height:38px; line-height:38px; border:1px solid #FFF; font-size:14px; color:#FFF; opacity:1; position:relative; left:0px;}
+.section3_more{ margin:0 auto 2% auto; display:block; width:170px; height:38px; line-height:38px;text-align:center; border:1px solid #FFF; font-size:14px; color:#FFF; opacity:1; position:relative; left:0px;}
 .section3_more:hover{ background:#FFF; color:#1947a5;}
 
 .index3{ display:none; width:100%; overflow:hidden; background:url(../images/section3_bg.jpg) no-repeat center center; background-size:cover;}
@@ -226,7 +226,7 @@ body{ font-size:12px; font-family:微软雅黑; overflow-x: hidden;}
 .title6{ height:17%; clear:both; margin:50px auto 0; display:block; opacity:1; position:relative; left:0px;}
 .section6_1{ display:inline-table; margin:3% auto 0 auto; opacity:1; position:relative; left:0px;}
 .section6_1 li{ float:left; margin:0 3px;}
-.section6_1 li a{ display:block; width:112px; height:35px; line-height:35px; border:1px solid #999999; font-size:16px; color:#999999; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -ms-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s;}
+.section6_1 li a{ display:block; width:112px; height:35px; line-height:35px;text-align:center; border:1px solid #999999; font-size:16px; color:#999999; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -ms-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s;}
 .section6_1 li a:hover{ background:#d7000f; color:#FFF; border:1px solid #d7000f;}
 .section6_2{ width:1170px; height:342px; margin:2% auto 0 auto; background:url(../images/section6_4.png) no-repeat left 52px; position:relative; opacity:1; position:relative; left:0px;}
 
@@ -269,7 +269,7 @@ body{ font-size:12px; font-family:微软雅黑; overflow-x: hidden;}
 .section6_4{ float:left; width:86%; margin-left:7%; margin-top:30px; font-size:24px; color:#FFF; font-weight:bold; height:44px; line-height:24px; position:relative;}
 .section6_4 span{ position:absolute; width:30px; height:1px; background:#FFF; left:0; bottom:0;}
 .section6_5{ float:left; width:84%; margin-left:7%; margin-top:15px; font-size:14px; color:#dddddd; height:96px; line-height:24px; overflow:hidden;}
-.section6_more{ display:block; width:122px; height:38px; line-height:38px; border:1px solid #d7000f; background:#d7000f; margin:1.5% auto 2.5% auto; font-size:14px; color:#FFF; opacity:1; position:relative; left:0px;}
+.section6_more{ display:block; width:122px; height:38px; line-height:38px;text-align:center; border:1px solid #d7000f; background:#d7000f; margin:1.5% auto 2.5% auto; font-size:14px; color:#FFF; opacity:1; position:relative; left:0px;}
 .section6_more:hover{ background:#FFF; color:#d7000f;}
 
 .index6{ display:none; width:100%; overflow:hidden; background:url(../images/section6_bg.jpg) no-repeat center center; background-size:cover;}
