--- a/css/agent.css
+++ b/css/agent.css
@@ -32,7 +32,7 @@
 	width:900px;height:430px;margin-top:-430px;margin-left:300px;
 }
 .dljmms_div .content_div .right_div .num_list_div{
-	width:50px;height:430px;background-color:#00f;
+	width:50px;height:430px;
 }
 .dljmms_div .content_div .right_div .num_list_div .item_div{
 	width:50px;height:50px;line-height:50px;color:#fff;font-size:25px;text-align:center;border-radius:3px;
