--- a/css/index.css
+++ b/css/index.css
@@ -40,10 +40,10 @@
 }
 
 .yjcp_div{
-	width:100%;height:550px;background-color:#00f;padding:1px;
+	width:100%;height:660px;background-color:#00f;padding:1px;
 }
 .yjcp_div .title_div{
-	width:816px;height:50px;line-height:50px;margin:30px auto;font-size:30px;
+	width:816px;height:50px;line-height:50px;margin:30px auto;color:#fff;font-size:30px;
 }
 .yjcp_div .content_div{
 	width:816px;height:385px;margin:0 auto;
@@ -51,11 +51,16 @@
 .yjcp_div .yjsbzc_div{
 	margin-top:-295px;
 	margin-left:600px;
+	color:#fff;
 }
 .yjcp_div .yjsbzc_div .tit_div{
+	height:50px;
+	line-height:50px;
 	font-size:25px;
 }
 .yjcp_div .yjsbzc_div .row_div{
+	height:30px;
+	line-height:30px;
 	font-size:15px;
 }
 
