--- a/css/zyit.css
+++ b/css/zyit.css
@@ -22,7 +22,7 @@ body{ font-size:12px; font-family:微软雅黑; overflow-x: hidden;}
 .center{ width:1200px; margin:0 auto;}
 
 .header{ width:100%; height:80px; background:url(../images/header_bg.jpg) top center no-repeat; position:fixed; left:0; top:0; z-index:100; display:block;}
-.logo{width: 280px;height:80px;}
+.logo{width: 196px;height:70px;margin-top: 5px;left: 2%;position: absolute;}
 .nav{ position:absolute; top:0; left:35%; width:808px; height:80px;}
 .nav li{ float:left; width:100px; margin-left:1px;}
 .nav li a{ display:block; width:100px; height:80px; line-height:80px; font-size:16px; color:#FFF; position:relative; overflow:hidden;}
