--- a/css/agent.css
+++ b/css/agent.css
@@ -4,12 +4,66 @@
 .qdfzjh_div .title_div{
 	width:1200px;height:50px;line-height:50px;margin:30px auto;font-size:30px;
 }
+
 .qdfzjh_div .img_div{
 	width:1200px;margin:0 auto;
 }
 .qdfzjh_div .img_div img{
 	width:100%;
 }
+
+.qdfzjh_div .content_div{
+	width:1200px;margin:0 auto;
+}
+.qdfzjh_div .content_div .people_div{
+	width:268px;height:270px;margin-top:130px;margin-left:30px;
+}
+.qdfzjh_div .content_div .people1_img{
+	width:268px;height:270px;
+}
+.qdfzjh_div .content_div .people2_img{
+	width:238px;height:240px;margin-top:15px;margin-left:-253px;position: absolute;
+}
+.qdfzjh_div .content_div .point1_img{
+	width:96px;height:66px;margin-top:-293px;margin-left:272px;position: absolute;
+}
+.qdfzjh_div .content_div .point2_img{
+	width:67px;height:13px;margin-top:-145px;margin-left:306px;position: absolute;
+}
+.qdfzjh_div .content_div .point3_img{
+	width:113px;height:70px;margin-top:-17px;margin-left:250px;position: absolute;
+}
+.qdfzjh_div .content_div .people_count_div{
+	width:135px;height:135px;
+}
+.qdfzjh_div .content_div .people_count_div .count_div{
+	width:135px;height:135px;line-height:135px;margin-top:-135px;color:#fff;font-size:50px;font-weight:bold;text-align:center;
+}
+.qdfzjh_div .content_div .pc1_div{
+	margin-top:-393px;margin-left:375px;
+}
+.qdfzjh_div .content_div .pc2_div{
+	margin-top:50px;margin-left:375px;
+}
+.qdfzjh_div .content_div .pc3_div{
+	margin-top:80px;margin-left:375px;
+}
+.qdfzjh_div .content_div .peo_desc_div{
+	width:200px;;margin-left:520px;color:#595959;font-size:20px;
+}
+.qdfzjh_div .content_div .qgfz_div{
+	margin-top:-500px
+}
+.qdfzjh_div .content_div .dzcg_div{
+	margin-top:93px;
+}
+.qdfzjh_div .content_div .qgyexcs_div{
+	margin-top:143px;
+}
+.qdfzjh_div .content_div .cxjd_div{
+	width:440px;height:545px;margin-top:-500px;margin-left:750px;background:url(../UserFiles/FriendLink/image/20211015/202110150026.png) top center no-repeat;
+}
+
 .dljmms_div{
 	width:100%;margin-bottom:30px;background-color:#fff;padding:1px;
 }
