--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,53 @@
+.video-bg {
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 10;
+    background: #000000;
+    height: 100%;
+    width: 100%;
+    opacity: 0.7;
+    display: none;
+}
+.video-box {
+    position: fixed;
+    top: 25%;
+    width: 100%;
+    height: 360px;
+    text-align: center;
+    display: none;
+    z-index: 11;
+}
+.video-box .video_lr {
+    width: 640px;
+    margin: auto;
+    position: relative;
+}
+.video-box .video_lr .video-close {
+    position: absolute;
+    top: 0;
+    right: -45px;
+    height: 45px;
+    width: 45px;
+    background: #00a3ff;
+    z-index: 10;
+    cursor: pointer;
+    font-size: 28px;
+    color: #eee;
+    line-height: 45px;
+}
+
+.spys_but_div{
+	width:178px;
+	height:40px;
+	left:50%;
+	margin-top:647px;
+	margin-left:-89px;
+	position: absolute;
+	cursor:pointer;
+	z-index:10;
+}
+
 .cpjs_div{
 	width:100%;height:700px;background-color:#006CDE;padding:1px;
 }
