--- a/css/case.css
+++ b/css/case.css
@@ -84,6 +84,28 @@
 	width:600px;margin-top:-337px;margin-left:600px;
 }
 
+.img_list_div{
+	width:1200px;height:auto;margin:30px auto;
+}
+.img_list_div .item_div{
+	width:400px;height:203px;
+}
+.img_list_div .cxtcl_div{
+	margin-top:-203px;margin-left:400px;
+}
+.img_list_div .stts_div{
+	margin-top:-206px;margin-left:800px;
+}
+.img_list_div .item_div .img_div{
+	width:355px;height:195px;margin:0 auto;
+}
+.img_list_div .item_div .img_div img{
+	width:100%;height:100%;
+}
+.img_list_div .item_div .img_div .text_div{
+	width:355px;height:60px;line-height:60px;margin-top:-60px;color:#FFF;font-size: 16px;text-align:center;background:url(../images/case3.png) repeat;position:absolute;z-index:1;
+}
+
 .foot_div{
 	width:100%;height:282px;background-color:#1F232A;
 }
