--- a/css/index.css
+++ b/css/index.css
@@ -48,6 +48,31 @@
 	z-index:10;
 }
 
+.wrzsxtjg_div .content_div{
+	width:816px;margin:30px auto;
+}
+.wrzsxtjg_div .content_div .left_div{
+	width:120px;height:600px;background:#0f0;
+}
+.wrzsxtjg_div .content_div .left_div .item_div{
+	width:100%;
+}
+.wrzsxtjg_div .content_div .left_div .ycgb_item_div,.wrzsxtjg_div .content_div .left_div .ecgb_item_div{
+	height:85px;
+}
+.wrzsxtjg_div .content_div .left_div .clzc_item_div,.wrzsxtjg_div .content_div .left_div .clxc_item_div{
+	height:90px;
+}
+.wrzsxtjg_div .content_div .left_div .qyhy_item_div{
+	height:95px;
+}
+.wrzsxtjg_div .content_div .left_div .item_div .title_div{
+	width:100%;height:30px;line-height:30px;font-size:15px;
+}
+.wrzsxtjg_div .content_div .left_div .item_div img{
+	float:right;
+}
+
 .cpjs_div{
 	width:100%;height:700px;background-color:#006CDE;padding:1px;
 }
