--- a/css/index.css
+++ b/css/index.css
@@ -72,6 +72,24 @@
 .wrzsxtjg_div .content_div .left_div .item_div img{
 	float:right;
 }
+.wrzsxtjg_div .content_div .right_div{
+	width:900px;height:600px;margin-top:-600px;margin-left:180px;background:#0f0;
+}
+.wrzsxtjg_div .content_div .right_div .wlwg_span{
+	margin-top:100px;margin-left:20px;font-size:15px;position:absolute;
+}
+.wrzsxtjg_div .content_div .right_div .img1{
+	width: 55px;height:27px;margin-top: 123px;margin-left:60px;position: absolute;
+}
+.wrzsxtjg_div .content_div .right_div .img2{
+	margin-top: 142px;margin-left:85px;position: absolute;
+}
+.wrzsxtjg_div .content_div .right_div .gyjhj_span{
+	margin-top:203px;margin-left:9px;font-size:15px;position:absolute;
+}
+.wrzsxtjg_div .content_div .right_div .img3{
+	margin-top: 225px;margin-left:50px;position: absolute;
+}
 
 .cpjs_div{
 	width:100%;height:700px;background-color:#006CDE;padding:1px;
