--- a/css/index.css
+++ b/css/index.css
@@ -90,6 +90,12 @@
 .wrzsxtjg_div .content_div .right_div .img3{
 	margin-top: 225px;margin-left:50px;position: absolute;
 }
+.wrzsxtjg_div .content_div .right_div .fwq_span{
+	margin-top:295px;margin-left:25px;font-size:15px;position:absolute;
+}
+.wrzsxtjg_div .content_div .right_div .img4{
+	margin-top: 241px;margin-left:85px;position: absolute;
+}
 
 .cpjs_div{
 	width:100%;height:700px;background-color:#006CDE;padding:1px;
