--- a/css/zyit.css
+++ b/css/zyit.css
@@ -78,7 +78,7 @@ body{ font-size:12px; font-family:微软雅黑; overflow-x: hidden;}
 .index1{ display:none; width:100%; overflow:hidden;}
 
 .section2{ background:url(../images/section2_bg.jpg) center center no-repeat;margin-top:50px; background-size:cover;}
-.title2{ width:816px;height:50px;line-height:50px;margin:0 auto;font-size:30px;}
+.title2{ width:1161px;height:50px;line-height:50px;margin:0 auto;font-size:30px;text-align: center;}
 
 /* 本例子css */
 .slideTxtBox{ width:1100px; margin:1% auto; overflow:hidden; opacity:1; position:relative; left:0px;}
