--- a/css/case.css
+++ b/css/case.css
@@ -1,7 +1,8 @@
 .logo_div{
 	width:100%;
 	height:380px;
-	background: rgba(0, 0, 0, 0) url("../UserFiles/FriendLink/image/20190807/20190807153606_3378.jpg") no-repeat scroll center center;
+	margin-top: 80px;
+	background: rgba(0, 0, 0, 0) url("../UserFiles/FriendLink/image/20190807/20190807153606_3378.png") no-repeat scroll center center;
 	visibility: visible;
 	animation-duration: 1s;
 	animation-delay: 0.3s;
