--- a/css/index.css
+++ b/css/index.css
@@ -193,20 +193,27 @@
 	margin-top: 435px;margin-left:840px;font-size:20px;font-weight: bold;position: absolute;
 }
 
+.icdkq_img{
+	width:263px;height:250px;margin-left:30px;
+}
+
 .cpjs_div{
-	width:100%;height:700px;background-color:#006CDE;padding:1px;
+	width:100%;height:937px;background-color:#fff;padding:1px;
 }
 .cpjs_div .title_div{
-	width:816px;height:50px;line-height:50px;margin:30px auto;color:#fff;font-size:30px;
+	width:1200px;height:50px;line-height:50px;margin:30px auto;color:#000;font-size:30px;text-align: center;
 }
 .cpjs_div .content_div{
-	width:816px;height:auto;margin:0 auto;
+	width:1200px;height:auto;margin:0 auto;
 }
 .cpjs_div .content_div .img_div{
-	width:816px;
+	width:1200px;
+}
+.cpjs_div .content_div .img_div .left_img{
+	width:1200px;
 }
 .cpjs_div .content_div .img_div .right_img{
-	margin-left:120px;
+	margin-left:50px;
 }
 .cpjs_div .content_div .sm_list_div{
 	width:100%;
@@ -233,45 +240,75 @@
 	text-align:center;
 }
 .cpjs_div .content_div .sm_list_div .item_div .item_tit_div{
-	height:50px;line-height:50px;color:#fff;text-align:center;font-size:20px;
+	height:50px;line-height:50px;color:#000;text-align:center;font-size:20px;
 }
 .cpjs_div .content_div .sm_list_div .item_div .item_cont_div{
 	width:80%;
 	line-height:30px;
-	color:#fff;
+	color:#000;
 	font-size:15px;
 	margin:0 auto;
 }
 
 .yjcp_div{
-	width:100%;height:690px;background-color:#006CDE;padding:1px;
+	width:100%;
+	height:553px;
+	background:url(../images/section3_bg.jpg) center center no-repeat;
+	padding:1px;
 }
 .yjcp_div .title_div{
-	width:816px;height:50px;line-height:50px;margin:30px auto;color:#fff;font-size:30px;
+	width:1300px;height:50px;line-height:50px;margin:30px auto;color:#fff;font-size:30px;text-align:center;
 }
 .yjcp_div .content_div{
-	width:816px;height:580px;margin:0 auto;
+	width:1300px;height:410px;margin:0 auto;
+}
+.yjcp_div .content_div img{
+	width:695px;height:392px;
 }
 .yjcp_div .yjsbzc_div{
-	margin-top:-295px;
-	margin-left:600px;
+	margin-top:-396px;
+	margin-left:760px;
 	color:#fff;
 }
 .yjcp_div .yjsbzc_div .tit_div{
-	height:50px;
-	line-height:50px;
+	height:60px;
+	line-height:60px;
 	font-size:25px;
 }
 .yjcp_div .yjsbzc_div .row_div{
-	line-height:30px;
+	line-height:40px;
 	font-size:15px;
+}
+.yjcp_div .yjsbzc_div .row_div .bgd_span{
+	margin-left:130px;
+}
+.yjcp_div .yjsbzc_div .row_div .zkdpm_span{
+	margin-left:115px;
+}
+.yjcp_div .yjsbzc_div .row_div .zzczytj_span{
+	margin-left:145px;
+}
+.yjcp_div .yjsbzc_div .row_div .wlgqsxt_span{
+	margin-left:130px;
+}
+.yjcp_div .yjsbzc_div .row_div .dgxq_span{
+	margin-left:70px;
+}
+.yjcp_div .yjsbzc_div .row_div .hwgs_span{
+	margin-left:156px;
+}
+.yjcp_div .yjsbzc_div .row_div .ledxsp_span{
+	margin-left:156px;
+}
+.yjcp_div .yjsbzc_div .row_div .ct_span{
+	margin-left:170px;
 }
 
 .xtywlc_div{
 	width:100%;height:752px;background-color:#fff;padding:1px;
 }
 .xtywlc_div .title_div{
-	width:1236px;height:50px;line-height:50px;margin:30px auto;font-size:30px;
+	width:1236px;height:50px;line-height:50px;margin:30px auto;font-size:30px;text-align:center;
 }
 .xtywlc_div .content_div{
 	width:1236px;height:642px;margin:0 auto;
