--- a/css/agent.css
+++ b/css/agent.css
@@ -1,5 +1,5 @@
 .qdfzjh_div{
-	width:100%;margin-top:150px;background-color:#f7f7f7;padding:1px;
+	width:100%;height:680px;margin-top:80px;background-color:#f7f7f7;padding:1px;
 }
 .qdfzjh_div .title_div{
 	width:1200px;height:50px;line-height:50px;margin:30px auto;font-size:30px;
@@ -78,25 +78,25 @@
 	width:100%;margin-bottom:30px;background-color:#fff;padding:1px;
 }
 .dljmms_div .title_div{
-	width:1200px;height:50px;line-height:50px;margin:30px auto;font-size:30px;
+	width:1040px;height:50px;line-height:50px;margin:30px auto;font-size:30px;
 }
 .dljmms_div .content_div{
-	width:1200px;margin:0 auto;
+	width:1040px;margin:0 auto;
 }
 .dljmms_div .content_div .left_div{
 	width:300px;height:430px;text-align:center;
 }
 .dljmms_div .content_div .left_div img{
-	width:173px;height:173px;margin-top:20px;
+	width:173px;height:173px;margin-top:50px;
 }
 .dljmms_div .content_div .left_div .text_div{
 	width:250px;height:50px;line-height:50px;margin:20px auto 0;color:#fff;font-size:25px;background-color:#484849;
 }
 .dljmms_div .content_div .right_div{
-	width:900px;height:430px;margin-top:-430px;margin-left:300px;
+	width:630px;height:430px;margin-top:-430px;margin-left:400px;
 }
 .dljmms_div .content_div .right_div .num_list_div{
-	width:50px;height:430px;
+	width:50px;height:315px;margin-top: 50px;
 }
 .dljmms_div .content_div .right_div .num_list_div .item_div{
 	width:50px;height:50px;line-height:50px;color:#fff;font-size:25px;text-align:center;border-radius:3px;
@@ -114,7 +114,7 @@
 	background-color:#FF9900;
 }
 .dljmms_div .content_div .right_div .jmms_list_div{
-	width:800px;height:430px;margin-top:-430px;margin-left:80px;
+	width:800px;height:430px;margin-top:-380px;margin-left:140px;
 }
 .dljmms_div .content_div .right_div .jmms_list_div .jmms2_div,.dljmms_div .content_div .right_div .jmms_list_div .jmms3_div{
 	margin-top:30px;
