--- a/css/index.css
+++ b/css/index.css
@@ -194,11 +194,26 @@
 }
 
 .icdkq_img{
-	width:263px;height:250px;margin-left:30px;
+	width:226px;height:215px;margin-left:50px;
+}
+.cpsbsxt_img{
+	width:296px;height:215px;margin-left: 17px;
+}
+.cphsbytj_img{
+	width:205px;height:205px;margin-top: 10px;margin-left: 63px;
+}
+.dzld_img,.hwgs_img{
+	width:214px;height:214px;margin-left: 60px;
+}
+.sfzydq_img{
+	width:241px;height:208px;margin-top: 5px;margin-left: 45px;
+}
+.ledxsp_img,.zndz_img{
+	width:277px;height:208px;margin-top: 5px;margin-left: 26px;
 }
 
 .cpjs_div{
-	width:100%;height:937px;background-color:#fff;padding:1px;
+	width:100%;height:760px;background-color:#fff;padding:1px;
 }
 .cpjs_div .title_div{
 	width:1200px;height:50px;line-height:50px;margin:30px auto;color:#000;font-size:30px;text-align: center;
@@ -210,10 +225,14 @@
 	width:1200px;
 }
 .cpjs_div .content_div .img_div .left_img{
-	width:1200px;
+	width:681px;
+	height:248px;
+	border:#0065C2 solid 2px;
 }
 .cpjs_div .content_div .img_div .right_img{
-	margin-left:50px;
+	width: 490px;
+	height:252px;
+	margin-left:20px;
 }
 .cpjs_div .content_div .sm_list_div{
 	width:100%;
@@ -240,13 +259,13 @@
 	text-align:center;
 }
 .cpjs_div .content_div .sm_list_div .item_div .item_tit_div{
-	height:50px;line-height:50px;color:#000;text-align:center;font-size:20px;
+	height:50px;line-height:50px;color:#595959;text-align:center;font-size:23px;font-weight: bold;
 }
 .cpjs_div .content_div .sm_list_div .item_div .item_cont_div{
 	width:80%;
 	line-height:30px;
-	color:#000;
-	font-size:15px;
+	color:#7F7F7F;
+	font-size:17px;
 	margin:0 auto;
 }
 
@@ -353,19 +372,37 @@
 	margin-top: -154px;margin-left: 415px;position: absolute;
 }
 .xtywlc_div .content_div .left_list_div .item_div .img3_div{
-	margin-top: -128px;margin-left: 442px;color:#FFC000;position: absolute;
+	margin-top: -128px;margin-left: 448px;position: absolute;
 }
 .xtywlc_div .content_div .left_list_div .item_div .img3_div .text_div{
 	width:67px;height:67px;line-height:67px;margin-top: -67px;font-size:25px;text-align:center;
+}
+.xtywlc_div .content_div .left_list_div .item_div .img3_div .bf_text_div{
+	color:#FFC000;
+}
+.xtywlc_div .content_div .left_list_div .item_div .img3_div .zjcy_text_div{
+	color:#000;
+}
+.xtywlc_div .content_div .left_list_div .item_div .img3_div .xgbm_text_div{
+	color:#C00000;
 }
 .xtywlc_div .content_div .right_list_div{
 	width:500px;height:537px;margin-top: -514px;margin-left: 682px;
 }
 .xtywlc_div .content_div .right_list_div .item_div .img1_div{
-	margin-top: 82px;margin-left: -40px;color:#FFC000;position: absolute;
+	margin-top: 82px;margin-left: -36px;color:#FFC000;position: absolute;
 }
 .xtywlc_div .content_div .right_list_div .item_div .img1_div .text_div{
 	width:67px;height:67px;line-height:67px;margin-top: -67px;font-size:25px;text-align:center;
+}
+.xtywlc_div .content_div .right_list_div .item_div .img1_div .ck_text_div{
+	color:#990099;
+}
+.xtywlc_div .content_div .right_list_div .item_div .img1_div .bf_text_div{
+	color:#00CCAD;
+}
+.xtywlc_div .content_div .right_list_div .item_div .img1_div .mg_text_div{
+	color:#00B79B;
 }
 .xtywlc_div .content_div .right_list_div .item_div .img2{
 	margin-top:56px;
