--- a/css/zyit.css
+++ b/css/zyit.css
@@ -210,9 +210,8 @@ body{ font-size:12px; font-family:微软雅黑; overflow-x: hidden;}
 .section3_2{ display:block; width:100%;}
 .section3_3{ position:absolute; display:block; width:100%; top:0; left:0; filter: alpha(opacity=0); -moz-opacity: 0; -khtml-opacity: 0; opacity: 0; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -ms-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s;}
 .section3_4{ width:100%; overflow:hidden; text-align:left;}
-.section3_5{ width:90%; margin:18px auto 0 auto; font-size:18px; font-weight:bold; color:#474643; height:30px; line-height:30px; overflow:hidden; text-overflow:ellipsis; white-space:nowrap;}
-.section3_6{ width:90%; margin:8px auto 0 auto; font-size:14px; color:#666666; height:20px; line-height:20px; overflow:hidden; text-overflow:ellipsis; white-space:nowrap;}
-.section3_7{ width:90%; margin:18px auto 0 auto; font-size:13px; color:#666; height:38px; line-height:38px; background:url(../images/section3_6.png) right center no-repeat; border-top:1px solid #666;}
+.section3_5{ width:90%; margin:18px auto 0 auto; font-size:18px; font-weight:bold; color:#474643; height:50px; line-height:50px; overflow:hidden; text-overflow:ellipsis; white-space:nowrap;border-top:1px solid #666;}
+.section3_6{ width:90%; margin:0 auto; font-size:14px; color:#666666; height:85px; line-height:20px;}
 .section3_1:hover .section3_3{ filter: alpha(opacity=100); -moz-opacity: 1; -khtml-opacity: 1; opacity: 1;}
 .section3_more{ margin:0 auto 2% auto; display:block; width:170px; height:38px; line-height:38px;text-align:center; border:1px solid #FFF; font-size:14px; color:#FFF; opacity:1; position:relative; left:0px;}
 .section3_more:hover{ background:#FFF; color:#1947a5;}
